[package]
name = "AgamaProject"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

serenity = { default-features = false,  features = ["client", "gateway", "rustls_backend", "model", "unstable_discord_api"], version = "0.10.10" }

